[gd_scene load_steps=4 format=3 uid="uid://dk854gj8j8qn0"]

[ext_resource type="Script" path="res://main.gd" id="1_uqqwy"]
[ext_resource type="Theme" uid="uid://bagfi2fsat3jx" path="res://whitekey.tres" id="2_0a0pg"]
[ext_resource type="Theme" uid="uid://n1mpyod400vw" path="res://blackkey.tres" id="3_mvu0u"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqqwy")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 292.0
offset_top = 84.0
offset_right = 1070.0
offset_bottom = 606.0
scroll_following = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 524.0
offset_right = 76.0
offset_bottom = 628.0
theme = ExtResource("2_0a0pg")

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 524.0
offset_right = 107.0
offset_bottom = 628.0
theme = ExtResource("2_0a0pg")

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 524.0
offset_right = 138.0
offset_bottom = 628.0
theme = ExtResource("2_0a0pg")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 523.0
offset_right = 84.0
offset_bottom = 595.0
theme = ExtResource("3_mvu0u")

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 101.0
offset_top = 523.0
offset_right = 115.0
offset_bottom = 595.0
theme = ExtResource("3_mvu0u")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down_C"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down_D"]
[connection signal="button_down" from="Button4" to="." method="_on_key_button_down" binds= [64]]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down_Cis"]
[connection signal="button_down" from="Button5" to="." method="_on_key_button_down" binds= [63]]
